--- a/src/pages/rule-box/rule-box.scss
+++ b/src/pages/rule-box/rule-box.scss
@@ -1,3 +1,14 @@
+.rule-box{
+  width: 100%;
+  height: auto;
+
+  .rule{
+    display: grid;
+    place-content: center;
+    margin-top: 50px;
+  }
+}
+
 #Rbg {
   width: 100%;
   height: 100vh;
@@ -19,14 +30,9 @@
   opacity: 1;
 }
 
-.EventVideo{
-  width: 40%;
-  margin: 90px auto 50px auto;
-  height: auto;
-}
-@media (max-width:768px) {
-  .EventVideo{
-    width: 90%;
-    margin-bottom: 30px;
-  }
+.head{
+  text-align: center;
+  color:rgb(124, 124, 124);
+  margin-top: 70px;
+  margin-bottom: 30px;
 }
